// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadLink render component 1`] = `
<div
  className="mfui-download-link"
>
  <div
    className="mfui-download-link__icon"
  >
    <test-file-stub
      className="mfui-download-link__icon-svg"
    />
  </div>
  <div>
    <TextLink
      className="mfui-download-link__link"
      dataAttrs={
        Object {
          "root": undefined,
        }
      }
      download={true}
      href="href"
    >
      text
    </TextLink>
    <p
      className="mfui-download-link__info"
    >
      PDF, 500 MB
    </p>
  </div>
</div>
`;

exports[`DownloadLink render with custom classes and data-attributes 1`] = `
<div
  className="mfui-download-link custom-classname root-class"
  data-testid="root-test"
>
  <div
    className="mfui-download-link__icon"
  >
    <test-file-stub
      className="mfui-download-link__icon-svg"
    />
  </div>
  <div>
    <TextLink
      className="mfui-download-link__link link-class"
      dataAttrs={
        Object {
          "root": Object {
            "data-testid": "link-test",
          },
        }
      }
      download={true}
      href="href"
    >
      text
    </TextLink>
    <p
      className="mfui-download-link__info"
    >
      PDF, 500 MB
    </p>
  </div>
</div>
`;
